<?xml version="1.0"?>
<package format="2">
  <name>mha_global_planner</name>
  <version>0.0.0</version>
  <description>plugin for the nav stack's global_planner based on sbpl's mha implementation</description>

  <maintainer email="mitranopeter@gmail.com">Peter Mitrano</maintainer>
  <license>WTFPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>roscpp</depend>

  <export>
  </export>
</package>
