<?xml version="1.0"?>
<package format="2">
  <name>mha_global_planner</name>
  <version>0.0.0</version>
  <description>plugin for the nav stack's global_planner based on sbpl's mha implementation</description>

  <maintainer email="mitranopeter@gmail.com">Peter Mitrano</maintainer>
  <license>WTFPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nav_core</depend>
  <depend>sbpl_catkin</depend>
  <depend>geometry_msgs</depend>

  <build_depend>libpcl-all-dev</build_depend>
  <exec_depend>libpcl-all</exec_depend>

  <export>
    <nav_core plugin="${prefix}/mha_global_planner_plugin.xml"/>
  </export>

  <doc_depend>doxygen</doc_depend>
</package>
